--- a/control1.html
+++ b/control1.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <nav>
         <ul class="menu">
@@ -25,27 +27,54 @@
     </nav>
     <div class="container">
         <h1>Registro</h1>
-        <p>El proceso de registro es el primer paso para acceder y utilizar el sistema. A través de este procedimiento, los usuarios pueden crear una cuenta proporcionando la información necesaria según su rol dentro de la plataforma. Es fundamental que los datos se introduzcan correctamente, ya que estos serán utilizados para la autenticación, comunicación y administración dentro del sistema.</p>
+        <p>El proceso de registro es el primer paso para acceder y utilizar el sistema. A través de este procedimiento,
+            los usuarios pueden crear una cuenta proporcionando la información necesaria según su rol dentro de la
+            plataforma. Es fundamental que los datos se introduzcan correctamente, ya que estos serán utilizados para la
+            autenticación, comunicación y administración dentro del sistema.</p>
+
+        <h2>Paso Obligatorio: Comprobación de la existencia de DNI</h2>
+        <p>Antes de completar el registro, es necesario verificar si el DNI ingresado ya existe en la base de datos.
+            Este paso garantiza que no haya duplicados en el sistema.</p>
+        <p>Para iniciar el proceso, introduce tu DNI en el campo correspondiente. Si el DNI no está registrado, podrás
+            continuar con el llenado del formulario con los siguientes datos personales:</p>
+        <p>Es importante que la información ingresada sea precisa, ya que será utilizada para futuras comunicaciones y
+            acceso al sistema.</p>
+        <div class="image-frame">
+            <img src="Imagen/registro7.png" alt="Formulario de registro inicial">
+        </div>
+        <p>Si el DNI ya está registrado en el sistema, aparecerá una notificación indicando que no es posible continuar
+            con el registro, evitando la duplicación de datos.</p>
+        <div class="image-frame">
+            <img src="Imagen/registro8.png" alt="Mensaje de DNI ya registrado">
+        </div>
+
 
         <h2>Paso 1: Ingreso de Datos Básicos</h2>
-        <p>El primer paso del registro consiste en completar un formulario con la información personal del usuario. Se deben ingresar los siguientes datos:</p>
+        <p>El primer paso del registro consiste en completar un formulario con la información personal del usuario. Se
+            deben ingresar los siguientes datos:</p>
         <ul>
             <li><strong>Nombre y apellido:</strong> Identificación personal del usuario.</li>
-            <li><strong>Correo electrónico:</strong> Dirección de email válida para notificaciones y recuperación de cuenta.</li>
+            <li><strong>Correo electrónico:</strong> Dirección de email válida para notificaciones y recuperación de
+                cuenta.</li>
             <li><strong>Número de teléfono:</strong> Medio de contacto alternativo.</li>
         </ul>
-        <p>Es importante que estos datos sean correctos, ya que serán utilizados para futuras comunicaciones y acceso al sistema.</p>
+        <p>Es importante que estos datos sean correctos, ya que serán utilizados para futuras comunicaciones y acceso al
+            sistema.</p>
         <div class="image-frame">
             <img src="Imagen/registro1.png" alt="Formulario de registro inicial">
         </div>
 
         <h2>Paso 2: Selección del Tipo de Cuenta</h2>
-        <p>Una vez ingresados los datos personales, el siguiente paso es definir el tipo de cuenta que se creará. El sistema permite dos opciones:</p>
+        <p>Una vez ingresados los datos personales, el siguiente paso es definir el tipo de cuenta que se creará. El
+            sistema permite dos opciones:</p>
         <ul>
-            <li><strong>Empleado:</strong> Usuarios que forman parte del equipo de trabajo de la empresa y necesitan acceso a funciones administrativas.</li>
-            <li><strong>Cliente:</strong> Usuarios externos que utilizarán el sistema para reservas, facturación u otros servicios.</li>
+            <li><strong>Empleado:</strong> Usuarios que forman parte del equipo de trabajo de la empresa y necesitan
+                acceso a funciones administrativas.</li>
+            <li><strong>Cliente:</strong> Usuarios externos que utilizarán el sistema para reservas, facturación u otros
+                servicios.</li>
         </ul>
-        <p>En caso de que un usuario desempeñe ambos roles (empleado y cliente), el sistema permite seleccionar ambas opciones simultáneamente.</p>
+        <p>En caso de que un usuario desempeñe ambos roles (empleado y cliente), el sistema permite seleccionar ambas
+            opciones simultáneamente.</p>
         <div class="image-frame">
             <img src="Imagen/registro2.png" alt="Selección de tipo de cuenta">
         </div>
@@ -54,7 +83,8 @@
         <p>Dependiendo del tipo de cuenta seleccionado, el sistema solicitará información adicional específica.</p>
 
         <h3>Registro de Empleado</h3>
-        <p>Si el usuario se registra como <strong>Empleado</strong>, deberá completar los siguientes campos adicionales:</p>
+        <p>Si el usuario se registra como <strong>Empleado</strong>, deberá completar los siguientes campos adicionales:
+        </p>
         <ul>
             <li><strong>Número de identificación de empleado:</strong> Código único asignado a cada trabajador.</li>
             <li><strong>Estado:</strong> Estado en que se encuentra en la empresa.</li>
@@ -70,43 +100,42 @@
         <ul>
             <li><strong>Data de registro</strong> Cuando se registra el cliente</li>
             <li><strong>Tarjeta de cliente</strong> Para poder verificar cada uno de los clientes</li>
-            <li><strong>Tipo de cliente:</strong> Categoría según su relación con la empresa (frecuente, nuevo, empresa, etc.).</li>
+            <li><strong>Tipo de cliente:</strong> Categoría según su relación con la empresa (frecuente, nuevo, empresa,
+                etc.).</li>
         </ul>
         <p>Estos datos permiten ofrecer una experiencia personalizada y optimizar la gestión de clientes.</p>
         <div class="image-frame">
             <img src="Imagen/registro3.png" alt="Formulario de registro para clientes">
         </div>
-
-        <h2>Paso 4: Visualización de Usuarios Registrados</h2>
-        <p>El sistema cuenta con una función que permite visualizar la lista de usuarios registrados. Esta opción es útil para:</p>
-        <ul>
-            <li>Administradores que desean gestionar el acceso al sistema.</li>
-            <li>Supervisores que necesitan monitorear el personal registrado.</li>
-            <li>Verificación rápida de datos en caso de errores o duplicados.</li>
-        </ul>
-        <p>La lista de usuarios se actualiza automáticamente tras cada nuevo registro.</p>
-        <div class="image-frame">
-            <img src="Imagen/registro5.png" alt="Lista de usuarios registrados">
-        </div>
-
-        <h2>Paso 5: Finalización del Registro</h2>
-        <p>Una vez completados todos los campos requeridos, el usuario debe confirmar el registro haciendo clic en el botón <strong>"Añadir"</strong>. Al hacerlo, el sistema validará la información ingresada y procederá a almacenar los datos en la base de datos.</p>
+        
+        <h2>Paso 4: Finalización del Registro</h2>
+        <p>Una vez completados todos los campos requeridos, el usuario debe confirmar el registro haciendo clic en el
+            botón <strong>"Añadir"</strong>. Al hacerlo, el sistema validará la información ingresada y procederá a
+            almacenar los datos en la base de datos.</p>
         <div class="image-frame">
             <img src="Imagen/registro6.png" alt="Botón de finalización del registro">
         </div>
 
         <h3>Errores Comunes y Soluciones</h3>
-        <p>Si el sistema detecta algún error en el proceso de registro, mostrará un mensaje indicando el problema. Algunos errores comunes incluyen:</p>
+        <p>Si el sistema detecta algún error en el proceso de registro, mostrará un mensaje indicando el problema.
+            Algunos errores comunes incluyen:</p>
         <ul>
-            <li><strong>Campos vacíos:</strong> Todos los campos obligatorios deben completarse antes de finalizar el registro.</li>
-            <li><strong>Correo electrónico inválido:</strong> Se debe ingresar una dirección de email en formato correcto.</li>
-            <li><strong>Número de teléfono incorrecto:</strong> Debe contener solo dígitos y tener la longitud adecuada.</li>
+            <li><strong>Campos vacíos:</strong> Todos los campos obligatorios deben completarse antes de finalizar el
+                registro.</li>
+            <li><strong>Correo electrónico inválido:</strong> Se debe ingresar una dirección de email en formato
+                correcto.</li>
+            <li><strong>Número de teléfono incorrecto:</strong> Debe contener solo dígitos y tener la longitud adecuada.
+            </li>
         </ul>
         <p>Si aparece un mensaje de error, el usuario debe corregir los datos y volver a intentar el registro.</p>
 
         <h2>Conclusión</h2>
-        <p>El proceso de registro es esencial para acceder a todas las funciones del sistema. Siguiendo los pasos correctamente, los usuarios pueden asegurarse de que su información se almacene de manera segura y puedan utilizar la plataforma sin inconvenientes.</p>
-        <p>En caso de problemas durante el registro, es recomendable contactar con el soporte técnico o un administrador del sistema para recibir asistencia.</p>
+        <p>El proceso de registro es esencial para acceder a todas las funciones del sistema. Siguiendo los pasos
+            correctamente, los usuarios pueden asegurarse de que su información se almacene de manera segura y puedan
+            utilizar la plataforma sin inconvenientes.</p>
+        <p>En caso de problemas durante el registro, es recomendable contactar con el soporte técnico o un administrador
+            del sistema para recibir asistencia.</p>
     </div>
 </body>
+
 </html>
